@@ -33,7 +33,7 @@ h1 {
 <p><b>0. Design principles </b>
 <p>Reliability: This is the most important thing. In order to maximize the reliability, every change will write to the *.rqda file directly, so you don't have to manually save your project.
 <p>Capacity of file management: This package is written for my own research, aiming at analyzing newspaper reports. In this case, there are lots of files, and I have put much effect on the management and organization of files (Sorting, Show coded files only, Show uncoded files only, Show those fit the searching criterion only etc.).
-<p>Mixed methods study: RQDA aims at mixed methods study. One example is the Cases Tab, which offers possibility of Qualitative Comaraptive Study (see <A target="_blank" HREF=http://cran.r-project.org/web/packages/QCA/index.html>QCA</a> for more).
+<p>Mixed methods study: RQDA aims at mixed methods study. One example is the Cases Tab, which offers possibility of Qualitative Comaraptive Study (see <A target="_blank" HREF=http://code.google.com/p/asrr/>ASRR</a> or <A target="_blank" HREF=http://cran.r-project.org/web/packages/QCA/index.html>QCA</a> for more).
 
 <p><b>1. Project </b>
 <p>You can create a new project in by clicking the new project button in Project Tab. RQDA will create a *.rqda file, which is a  SQLite database. All the information (e.g. files, code list, all kinds of memo, coding, and relation between codes or between files etc.) is stored in that single file. Single *.rqda file makes backup or data migration much easier.
@@ -81,7 +81,7 @@ h1 {
 
 <p>First, you add a higher (comparaed to codes) level concept by clicking "add" button. You can add more by similar step. Then You add codes to one higher level concept. To do this, you first select that higher level concept, then click "AddTo" button. A list of codes pops up, you can select codes you want to add, then click ok. If you want to delete codes from a category, select a category first, then codes of this category will show in the "Codes.of.This.Categroy", select codes you want to drop from this category, then cilck "DropFrom" button. The operation is similar to F-Cat.
 
-<P> You may want to organize those higher level concepts--<b>"structure of concepts"</b>. RQDA doesn't provide tree-like structure of organize them. I avoid this choice because sometimes tree-like structure brings confusion (loops between concepts are possible, which is the main sources of confusion). Meanwhile, I would like to encourage users to think hard about the structure of higher level concepts. After all, theory should inform knowledge in a parsimonious way. It makes no sense to make theory as complex as the real-world. Still, it is possible to manage higher level concepts in using proper naming rules. For example, I have "trust" and "norms of reciprocity", and I want to group them by "cognitive social capital". Then I can rename them to "10-trust","10-norms of reciprocity", and "1-cognitive social capital". By sorting (see tips 3), you can see the relationship between these concepts.
+<P> You may want to organize those higher level concepts--<b>"structure of concepts"</b>. RQDA doesn't provide tree-like structure to organize them. I avoid this choice because sometimes tree-like structure brings confusion (loops between concepts are possible, which is the main sources of confusion). Meanwhile, I would like to encourage users to think hard about the structure of higher level concepts. After all, theory should inform knowledge in a parsimonious way. It makes no sense to make theory as complex as the real-world. Still, it is possible to manage higher level concepts in using proper naming rules. For example, I have "trust" and "norms of reciprocity", and I want to group them by "cognitive social capital". Then I can rename them to "10-trust","10-norms of reciprocity", and "1-cognitive social capital". By sorting (see tips 3), you can see the relationship between these concepts.
 
 <p><b>7. Cases</b>
 <p> under construction.
